# xserver-SIXEL

./: README.md  build-deps.sh  build-xsixel.sh  configure.ac  startx.sh  stop.sh
dix/: Makefile.am  main.c
hw/kdrive/: Makefile.am
hw/kdrive/sixel/: Makefile.am  sixel.c
hw/kdrive/src/: Makefile.am  kdrive.c  kdrive.h  kexeccmd.c  kinput.c
man/: Makefile.am
os/: osinit.c
xkb/: Makefile.am
